# Project-Deep-Learning-Engine-from-scratch-on-C-

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  main.cpp
include/: linear.hpp  mlp.hpp  tensor.hpp
src/: linear.cpp  mlp.cpp  tensor.cpp
tests/: test_main.cpp
